# ini-parser

./: .gitignore  CMakeLists.txt  README.md
tests/: CMakeLists.txt  test_example.cpp
